--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,10 @@
+<%require 'pry'%>
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%=@analyzed_text.count_of_words%></h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%=@analyzed_text.count_of_vowels%></h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%=@analyzed_text.count_of_consonants%></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: <%=@analyzed_text.most_used_letter.to_a.flatten[0].upcase%>, used <%=@analyzed_text.most_used_letter.to_a.flatten[1].to_s%> times</h2>
